--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -8,5 +8,9 @@
     <strong>Content:</strong>
     <%= tweet.content %>
   </p>
+  <p>
+    <stron>Created at:</strong>
+    <%= tweet.created_at %>
+  </p>
 
 </div>
