--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -12,5 +12,9 @@
     <stron>Created at:</strong>
     <%= tweet.created_at %>
   </p>
+  <p>
+    <stron>Likes:</strong>
+    <%= tweet.likes %>
+  </p>
 
 </div>
