--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,6 +6,9 @@
   <% @tweets.each do |tweet| %>
     <%= render tweet %>
     <p>
+     <%= button_to 'Like this tweet', like_tweet_path(tweet), method: :put %>
+    </p>
+    <p>
       <%= link_to "Show this tweet", tweet %>
       <hr/>
     </p>
