--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,27 +1,40 @@
-<%= form_with(model: tweet) do |form| %>
-  <% if tweet.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
 
-      <ul>
-        <% tweet.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<div style="background-color: #fff;
+  border: 1px dashed black;
+  solid #ccc;
+  padding: 10px;
+  color: rgb(77, 94, 255);
+  margin-top: 10px, auto;
+  margin-left: em, auto;
+  border: 1px dashed rgb(77, 94, 155);
+  padding-left: 5em  ;
+  padding-top: 20px auto;
+  width: 90%;
+  background-color: rgb(255, 255, 255);">
 
-  <div>
-    <%= form.label :author, style: "display: block" %>
-    <%= form.text_field :author %>
-  </div>
+  <%= form_with(model: tweet) do |form| %>
 
-  <div>
-    <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
-  </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
+
+  <table border-style="0", cellpadding="2">
+    <tbody>
+      <tr>
+        <td>Your name:</td>
+        <td>
+          <input size="70" type="text" name="tweet[author]" id="tweet_author" style ="width: 95%" >
+        </td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Your tweet:</td>
+        <td>
+          <textarea rows="2" cols="70" name="tweet[content]" id="tweet_content" style ="width: 95%"></textarea>
+        </td>
+        <td>
+          <input type="submit" name="commit" value="Tweet!" data-disable-with="Tweet!">
+        </td>
+      </tr>
+    </tbody>
+  </table>
 <% end %>
+</div>
